# hive-sense-fw

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  consts.rs  main.rs
