[package]
name = "ruche-fw"
version = "0.1.0"
authors = ["Pierrick Curt <pierrickcurt@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
    "defmt",
] }

esp-hal = { version = "0.16.1", features = [
  "esp32c3",
  "embassy",
  "embassy-time-timg0",
  "embassy-executor-thread",
  "embassy-integrated-timers",
  "async",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log", "defmt-espflash"] }

lora-phy = { git = "https://github.com/pcurt/lora-rs.git", branch="feat/radio-low-power", features = ["lorawan-radio"]}
lorawan-device = { git = "https://github.com/pcurt/lora-rs.git", branch="feat/radio-low-power", default-features = false, features = ["embassy-time", "default-crypto", "defmt"]}
embassy-executor =  { version = "0.5.0" }
embassy-time =  { version = "0.3.0" }
embassy-time-driver = { version = "0.1.0" }

embedded-io-async = "0.6.1"
fugit = "0.3.7"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
embedded-hal-async = "1.0.0"

defmt = "0.3"
critical-section = "1.1.2"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

