[package]
name = "hive-sense-fw"
version = "0.1.0"
authors = ["Pierrick Curt <pierrickcurt@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
    "defmt",
] }

esp-hal = { version = "0.18.0", features = ["async", "esp32c3", "embedded-hal-02"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log", "defmt-espflash"] }

lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev="b4b6741152b0bc599574eecff9a7ffc031ba1823", features = ["lorawan-radio"]}
lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", rev="b4b6741152b0bc599574eecff9a7ffc031ba1823", default-features = false, features = ["embassy-time", "default-crypto", "defmt"]}
embassy-executor =  { version = "0.5.0" }
embassy-time =  { version = "0.3.0" }
embassy-time-driver = { version = "0.1.0" }

embedded-io-async = "0.6.1"
fugit = "0.3.7"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
embedded-hal-async = "1.0.0"

defmt = "0.3"
critical-section = "1.1.2"
loadcell = "0.2.0"
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "time-timg0", "integrated-timers"] }
esp-wifi = { version = "0.6.0", features = [
    "esp32c3",
    "wifi-default",
    "utils",
    "phy-enable-usb",
] }
heapless = { version = "0.8.0", default-features = false }
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

